--- a/alecture/.eslintrc
+++ b/alecture/.eslintrc
@@ -1,3 +1,3 @@
 {
-  "extends": ["plugin:prettier/recommended", "react-app"]
+    "extends": ["plugin:prettier/recommended"] // prettier가 추천하는대로 따르겠다.
 }
